--- a/index1.html
+++ b/index1.html
@@ -13,31 +13,31 @@
       <img src="./assets/title.png" alt="Your Image" class="title-image">
       <div id="car-id">
         <div class="id">
-          5J6RM<span class="empty-space"></span>4H58F<span class="empty-space"></span>L0175<span
-            class="empty-space"></span>53
+          2T1BU<span class="empty-space"></span>4EEXD<span class="empty-space"></span>C9472<span
+            class="empty-space"></span>92
         </div>
         <div class="car-info">
-          <span style="padding-left: 45px;">S</span>
-          <span style="padding-left: 6px; letter-spacing:2px">2015</span>
-          <span style="padding-left: 5px;">HON</span>
-          <span style="padding-left: 12px;">CRV</span>
-          <span style="padding-left: 45px;">SUV</span>
+          <span style="padding-left: 45px;">N</span>
+          <span style="padding-left: 6px; letter-spacing:2px">2013</span>
+          <span style="padding-left: 5px;">TOYO</span>
+          <span style="padding-left: 12px;">CORO</span>
+          <span style="padding-left: 45px;">SEDAN</span>
         </div>
       </div>
       <div id="car-characterstics">
         <span>STANDARD</span>
         <span style="padding-left: 140px;">5</span>
-        <span style="padding-left: 60px;">WHT</span>
+        <span style="padding-left: 60px;">SIL</span>
         <span style="padding-left: 140px;">2</span>
       </div>
       <div id="issue-date">
         <span style="letter-spacing: 2px;">60.00</span>
-        <span style="padding-left: 25px; letter-spacing: 2px;">04-15-2024</span>
-        <span style="padding-left: 188px; letter-spacing: 2px;">48000</span>
+        <span style="padding-left: 25px; letter-spacing: 2px;">05-18-2024</span>
+        <span style="padding-left: 188px; letter-spacing: 2px;">80000</span>
         <span style="padding-left: 16px;">A</span>
       </div>
       <div id="address">
-        <span>BEIHONG FENG</span>
+        <span>MEIRONG WU</span>
         <span>21 LAKE AVE APT 3B</span>
         <span>EAST BRUNSWICK<span style="padding-left: 16px;"></span>NJ <span style="padding-left: 4px;"></span><span
             style="letter-spacing: 2px;">08816
@@ -45,16 +45,16 @@
       </div>
       <div id="owner">1</div>
       <div id="license-number">
-        <pre>OWNER  DL/CC #<span class="small-space"></span>:<span class="small-space"></span><span style="letter-spacing: 1.5px;">F2531 07900 06722</span></pre>
+        <pre>OWNER  DL/CC #<span class="small-space"></span>:<span class="small-space"></span><span style="letter-spacing: 1.5px;">W9001 53700 59732</span></pre>
       </div>
       <div id="control-number">
         <div class="cn">
           <span>CONTROL NUMBER</span>
-          <p class="cn">NF776019</p>
+          <p class="cn">MK888557</p>
         </div>
-        <img src="assets/NF776019.png" alt="cn1">
+        <img src="assets/MK888557.png" alt="cn1">
       </div>
-      <div id="KW">KW <span>ED20243829257</span></div>
+      <div id="KW">PM <span>WA20247335042</span></div>
     </div>
     </div>
   </body>
